# dicom

./: CMakeLists.txt  DicomViewWidget.h  Readme.md  compilar.sh  ferramentas.sh  read_dicom.cpp  temp
include/dicom/: dicom_lib.h
